Updated deprecations in Float/Boolean/Double initializations in code to comply with JDK 11 standards. Updated README to describe the release convention (using semver 2.0.0). Updated project dependencies to latest package versions.